// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`freeform > freeform search mixed throughout 1`] = `
{
  "input": "freeform1 age:5 freeform2 search",
  "result": [
    "freeform1",
    "age = 5",
    "freeform2",
    "search",
  ],
}
`;

exports[`freeform > treats as a string 1`] = `
{
  "input": "freeform",
  "result": [
    "freeform",
  ],
}
`;

exports[`in filters > negation 1`] = `
{
  "input": "!user:[jane, john doe]",
  "result": [
    "user NOT IN (jane, john doe)",
  ],
}
`;

exports[`in filters > works 1`] = `
{
  "input": "user:[jane, john doe] release:[12.0]",
  "result": [
    "user IN (jane, john doe)",
    "release IN (12.0)",
  ],
}
`;

exports[`operators > < 1`] = `
{
  "input": "num_members:<5.0",
  "result": [
    "num_members < 5.0",
  ],
}
`;

exports[`operators > <= 1`] = `
{
  "input": "num_members:<=5.0",
  "result": [
    "num_members <= 5.0",
  ],
}
`;

exports[`operators > > 1`] = `
{
  "input": "num_members:>5.0",
  "result": [
    "num_members > 5.0",
  ],
}
`;

exports[`operators > >= 1`] = `
{
  "input": "num_members:>=5.0",
  "result": [
    "num_members >= 5.0",
  ],
}
`;

exports[`text filters > .-_ in keys 1`] = `
{
  "input": "payments.plan-type_is:free",
  "result": [
    "payments.plan-type_is = free",
  ],
}
`;

exports[`text filters > @.-_ in values 1`] = `
{
  "input": "email:jane@example.com type:public-company_x",
  "result": [
    "email = jane@example.com",
    "type = public-company_x",
  ],
}
`;

exports[`text filters > multiple 1`] = `
{
  "input": "plan:free age:5",
  "result": [
    "plan = free",
    "age = 5",
  ],
}
`;

exports[`text filters > negation 1`] = `
{
  "input": "!plan:free",
  "result": [
    "!(plan = free)",
  ],
}
`;

exports[`text filters > negation in quoted 1`] = `
{
  "input": "!user:"john doe"",
  "result": [
    "!(user = john doe)",
  ],
}
`;

exports[`text filters > quoted value 1`] = `
{
  "input": "user:"john doe"",
  "result": [
    "user = john doe",
  ],
}
`;

exports[`text filters > works 1`] = `
{
  "input": "plan:free",
  "result": [
    "plan = free",
  ],
}
`;
